package cn.wtk.mp.common.base.uid;

/**
 * @author wtk
 * @date 2023-01-02
 */
public interface UidGenerator {
    long nextId();
}
